# upm_mc

./: .gitignore  CMakeLists.txt  README.md  auto_publish.sh
examples/c++/: CMakeLists.txt  geometry.cxx
examples/javascript/: camera.js  ojl298.js
examples/python/: camera.py  l298.py
src/: CMakeLists.txt  README.md.in  npmignore.in  package.json.in
src/ScreenSpi/: CMakeLists.txt  jsupm_screenSpi9225.i  pyupm_screenSpi9225.i  screenSpi9225.cxx  screenSpi9225.h
src/camera/: CMakeLists.txt  camera.cxx  camera.h  jsupm_camera.i  pyupm_camera.i
src/camera/camera/: camera.cxx  camera.h
src/facedetect/: CMakeLists.txt  facedetect.cxx  facedetect.h  jsupm_facedetect.i  pyupm_facedetect.i
src/geometry/: CMakeLists.txt  geometry.cxx  geometry.h  jsupm_geometry.i  pyupm_geometry.i
src/hd44780/: CMakeLists.txt  hd44780.cxx  hd44780.h  jsupm_hd44780.i  pyupm_hd44780.i
src/img2base64/: CMakeLists.txt  img2base64.cxx  img2base64.h  jsupm_img2base64.i  pyupm_img2base64.i
src/img2base64/lib/libb64/examples/: .c-example1.c.swp
src/img2base64/lib/libb64/examples/c-example1.dSYM/Contents/Resources/DWARF/: c-example1
src/img2base64/lib/libb64/examples/c-example2.dSYM/Contents/Resources/DWARF/: c-example2
src/img2base64/lib/libb64/include/b64/: cdecode.h  cencode.h
src/irRemote/: CMakeLists.txt  irRemote.cxx  irRemote.h  jsupm_irRemote.i  pyupm_irRemote.i
src/numberdetect/: CMakeLists.txt  jsupm_numberdetect.i  numberdetect.cxx  numberdetect.h  pyupm_numberdetect.i
src/ojl298/: CMakeLists.txt  jsupm_ojl298.i  ojl298.cxx  ojl298.h  pyupm_ojl298.i
src/rgbled/: CMakeLists.txt  jsupm_rgbled.i  pyupm_rgbled.i  rgbled.cxx  rgbled.h
src/screenspi/: pyupm_screenspi9225.i  screenspi9225.cxx  screenspi9225.h
