set (libname "screenSpi9225")
set (libdescription "UPM for ILI9225 SPI Screen")
set (module_src ${libname}.cxx)
set (module_h ${libname}.h)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIR})
upm_module_init()
target_link_libraries(${libname} ${OpenCV_LIBS})
if(BUILDSWIG)
	if(BUILDSWIGNODE)
		swig_link_libraries (jsupm_${libname} ${OpenCV_LIBS} ${NODE_LIBRARIES})
	endif()
	if(BUILDSWIGNODE)
		swig_link_libraries (pyupm_${libname} ${OpenCV_LIBS} ${PYTHON_LIBRARIES})
	endif()
endif()
